--- a/LojaEcommerce/Views/Pedido/Carrinho.cshtml
+++ b/LojaEcommerce/Views/Pedido/Carrinho.cshtml
@@ -37,4 +37,9 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-12 ">
+        <a href="/pedido/resumo" class="btn btn-success pull-right">Finalizar Pedido</a>
+    </div>
+</div>
 
