--- a/LojaEcommerce/Views/Pedido/Carrossel.cshtml
+++ b/LojaEcommerce/Views/Pedido/Carrossel.cshtml
@@ -5,12 +5,6 @@
 <h3>Catálogo</h3>
 
 <div id="my-carousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#my-carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#my-carousel" data-slide-to="1"></li>
-        <li data-target="#my-carousel" data-slide-to="2"></li>
-    </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
@@ -25,6 +19,9 @@
                         <div class="panel-footer">
                             <div>Camiseta Error 404</div>
                             <div>R$ 59,90</div>
+                            <div class="text-center">
+                                <a href="/pedido/carrinho">Adicionar</a>
+                            </div>
                         </div>
                     </div>  
                 </div>
@@ -36,6 +33,9 @@
                         <div class="panel-footer">
                             <div>Camiseta May The Code Be With You</div>
                             <div>R$ 59,90</div>
+                            <div class="text-center">
+                                <a href="/pedido/carrinho">Adicionar</a>
+                            </div>
                         </div>
                     </div> 
                 </div>
@@ -47,6 +47,9 @@
                         <div class="panel-footer">
                             <div>Camiseta Como Seria Bom</div>
                             <div>R$ 59,90</div>
+                            <div class="text-center">
+                                <a href="/pedido/carrinho">Adicionar</a>
+                            </div>
                         </div>
                     </div> 
                 </div>
@@ -58,6 +61,9 @@
                         <div class="panel-footer">
                             <div>Livro Rest</div>
                             <div>R$ 59,90</div>
+                            <div class="text-center">
+                                <a href="/pedido/carrinho">Adicionar</a>
+                            </div>
                         </div>
                     </div> 
                 </div>
