--- a/LojaEcommerce/wwwroot/css/site.css
+++ b/LojaEcommerce/wwwroot/css/site.css
@@ -41,6 +41,8 @@ textarea {
 .left.carousel-control,
 .right.carousel-control {
     background-image: none;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .navbar-brand{
