trocando razor por taghelper

--- a/LojaEcommerce/Views/Pedido/Carrinho.cshtml
+++ b/LojaEcommerce/Views/Pedido/Carrinho.cshtml
@@ -38,8 +38,8 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12 ">
-        <a href="/pedido/resumo" class="btn btn-success pull-right">Finalizar Pedido</a>
+    <div class="col-md-12">
+        <a asp-action="resumo" class="btn btn-success pull-right">Finalizar Pedido</a>
     </div>
 </div>
 
