--- a/LojaEcommerce/Views/Pedido/Carrossel.cshtml
+++ b/LojaEcommerce/Views/Pedido/Carrossel.cshtml
@@ -20,7 +20,8 @@
                             <div>Camiseta Error 404</div>
                             <div>R$ 59,90</div>
                             <div class="text-center">
-                                <a href="/pedido/carrinho">Adicionar</a>
+                                <a asp-action="carrinho">Adicionar</a>
+                                @Html.ActionLink("Adicionar", "carrinho", "pedido")
                             </div>
                         </div>
                     </div>  
@@ -34,7 +35,7 @@
                             <div>Camiseta May The Code Be With You</div>
                             <div>R$ 59,90</div>
                             <div class="text-center">
-                                <a href="/pedido/carrinho">Adicionar</a>
+                                <a asp-action="carrinho">Adicionar</a>
                             </div>
                         </div>
                     </div> 
@@ -48,7 +49,7 @@
                             <div>Camiseta Como Seria Bom</div>
                             <div>R$ 59,90</div>
                             <div class="text-center">
-                                <a href="/pedido/carrinho">Adicionar</a>
+                                <a asp-action="carrinho">Adicionar</a>
                             </div>
                         </div>
                     </div> 
@@ -62,7 +63,7 @@
                             <div>Livro Rest</div>
                             <div>R$ 59,90</div>
                             <div class="text-center">
-                                <a href="/pedido/carrinho">Adicionar</a>
+                                <a asp-action="carrinho">Adicionar</a>
                             </div>
                         </div>
                     </div> 
