--- a/LojaEcommerce/Views/Pedido/Carrinho.cshtml
+++ b/LojaEcommerce/Views/Pedido/Carrinho.cshtml
@@ -1,6 +1,7 @@
 ﻿@{ 
     ViewData["Title"] = "Carrinho";
 }
+@model List<ItemPedido>
 
 <h3>Meu Carrinho</h3>
 
@@ -16,17 +17,20 @@
         </div>
     </div>
     <div class="panel-body">
-        <div class="row">
-            <div class="col-md-3">
-                <img src="~/images/produtos/small_4.jpg" />
+        @foreach (var item in Model)
+        {
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="~/images/produtos/small_@(item.Id).jpg" />
+                </div>
+                <div class="col-md-3">@(item.Produto.Nome)</div>
+                <div class="col-md-2">@(item.PrecoUnitario)</div>
+                <div class="col-md-2">@(item.Quantidade)</div>
+                <div class="col-md-2">
+                    <span class="pull-right">@(item.Subtotal)</span>
+                </div>
             </div>
-            <div class="col-md-3">REST</div>
-            <div class="col-md-2">R$ 70,00</div>
-            <div class="col-md-2">3</div>
-            <div class="col-md-2">
-                <span class="pull-right">R$ 210,00</span>
-            </div>
-        </div>
+        }
     </div>
     <div class="panel-footer">
         <div class="row">
