--- a/LojaEcommerce/Views/Pedido/Carrossel.cshtml
+++ b/LojaEcommerce/Views/Pedido/Carrossel.cshtml
@@ -5,89 +5,70 @@
 <h3>Catálogo</h3>
 
 <div id="my-carousel" class="carousel slide" data-ride="carousel">
-
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-
             <div class="row">
-                <div class="col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <img src="~/images/produtos/large_1.jpg" />
-                        </div>
-                        <div class="panel-footer">
-                            <div>Camiseta Error 404</div>
-                            <div>R$ 59,90</div>
-                            <div class="text-center">
-                                <a asp-action="carrinho">Adicionar</a>
-                                @Html.ActionLink("Adicionar", "carrinho", "pedido")
-                            </div>
-                        </div>
-                    </div>  
-                </div>
-                <div class="col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <img src="~/images/produtos/large_2.jpg" />
-                        </div>
-                        <div class="panel-footer">
-                            <div>Camiseta May The Code Be With You</div>
-                            <div>R$ 59,90</div>
-                            <div class="text-center">
-                                <a asp-action="carrinho">Adicionar</a>
-                            </div>
-                        </div>
-                    </div> 
-                </div>
-                <div class="col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <img src="~/images/produtos/large_3.jpg" />
-                        </div>
-                        <div class="panel-footer">
-                            <div>Camiseta Como Seria Bom</div>
-                            <div>R$ 59,90</div>
-                            <div class="text-center">
-                                <a asp-action="carrinho">Adicionar</a>
-                            </div>
-                        </div>
-                    </div> 
-                </div>
-                <div class="col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <img src="~/images/produtos/large_4.jpg" />
-                        </div>
-                        <div class="panel-footer">
-                            <div>Livro Rest</div>
-                            <div>R$ 59,90</div>
-                            <div class="text-center">
-                                <a asp-action="carrinho">Adicionar</a>
-                            </div>
-                        </div>
-                    </div> 
-                </div>
-            </div>
 
-
-        </div>
-        <div class="item">
-            <div class="panel-body">
-                <img src="~/images/produtos/large_2.jpg" />
-            </div>
-            <div class="panel-footer">
-                <div>Camiseta May The Code Be With You</div>
-                <div>R$ 59,90</div>
+                @for (int i = 0; i < 4; i++)
+                {
+                    <div class="col-md-3">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <img src="~/images/produtos/large_@(Model[i].Id).jpg" />
+                            </div>
+                            <div class="panel-footer">
+                                <div>@(Model[i].Nome) </div>
+                                <div>R$ @(Model[i].Preco)</div>
+                                <div class="text-center">
+                                    <a asp-action="carrinho">Adicionar</a>
+                                </div>
+                            </div>
+                        </div>  
+                    </div>
+                }
             </div>
         </div>
         <div class="item">
-            <div class="panel-body">
-                <img src="~/images/produtos/large_3.jpg" />
+            <div class="row">
+                @for (int i = 4; i < 8; i++)
+                {
+                    <div class="col-md-3">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <img src="~/images/produtos/large_@(Model[i].Id).jpg" />
+                            </div>
+                            <div class="panel-footer">
+                                <div>@(Model[i].Nome) </div>
+                                <div>R$ @(Model[i].Preco)</div>
+                                <div class="text-center">
+                                    <a asp-action="carrinho">Adicionar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
             </div>
-            <div class="panel-footer">
-                <div>Camiseta Como Seria Bom</div>
-                <div>R$ 59,90</div>
+        </div>
+        <div class="item">
+            <div class="row">
+                @for (int i = 8; i < 9; i++)
+                {
+                    <div class="col-md-3">
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <img src="~/images/produtos/large_@(Model[i].Id).jpg" />
+                            </div>
+                            <div class="panel-footer">
+                                <div>@(Model[i].Nome) </div>
+                                <div>R$ @(Model[i].Preco)</div>
+                                <div class="text-center">
+                                    <a asp-action="carrinho">Adicionar</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
             </div>
         </div>
     </div>
