ajustando visual do carrinho e contadores dinamicos

--- a/LojaEcommerce/Views/Pedido/Carrinho.cshtml
+++ b/LojaEcommerce/Views/Pedido/Carrinho.cshtml
@@ -1,7 +1,7 @@
 ﻿@{ 
     ViewData["Title"] = "Carrinho";
 }
-@model List<ItemPedido>
+@model LojaEcommerce.Models.ViewModels.CarrinhoViewModel
 
 <h3>Meu Carrinho</h3>
 
@@ -9,23 +9,23 @@
     <div class="panel-heading">
         <div class="row">
             <div class="col-md-6">ITEM</div>
-            <div class="col-md-2">PREÇO UNITÁRIO</div>
-            <div class="col-md-2">QUANTIDADE</div>
+            <div class="col-md-2 text-center">PREÇO UNITÁRIO</div>
+            <div class="col-md-2 text-center">QUANTIDADE</div>
             <div class="col-md-2">
                 <span class="pull-right">SUBTOTAL</span>
             </div>
         </div>
     </div>
     <div class="panel-body">
-        @foreach (var item in Model)
+        @foreach (var item in Model.Itens)
         {
-            <div class="row">
+            <div class="row row-center">
                 <div class="col-md-3">
                     <img src="~/images/produtos/small_@(item.Id).jpg" />
                 </div>
                 <div class="col-md-3">@(item.Produto.Nome)</div>
-                <div class="col-md-2">@(item.PrecoUnitario)</div>
-                <div class="col-md-2">@(item.Quantidade)</div>
+                <div class="col-md-2 text-center">@(item.PrecoUnitario)</div>
+                <div class="col-md-2 text-center">@(item.Quantidade)</div>
                 <div class="col-md-2">
                     <span class="pull-right">@(item.Subtotal)</span>
                 </div>
@@ -34,9 +34,15 @@
     </div>
     <div class="panel-footer">
         <div class="row">
-            <div class="col-md-10">Total: 4 itens</div>
+            <div class="col-md-10">
+                <span> 
+                    Total: @Model.Itens.Count() @(Model.Itens.Count() < 2 ? "item" : "itens")
+                </span>
+            </div>
             <div class="col-md-2">
-                <span class="pull-right">R$ 210,00</span>
+                <span class="pull-right">
+                   Total R$ @Model.Total
+                </span>
             </div>
         </div>
     </div>
