--- a/LojaEcommerce/wwwroot/css/site.css
+++ b/LojaEcommerce/wwwroot/css/site.css
@@ -55,3 +55,8 @@ textarea {
     background-color: #F8965D;
     border-color: white;
 }
+
+.row-center{
+    display:flex;
+    align-items:center;
+}
