--- a/LojaEcommerce/Views/Pedido/Carrossel.cshtml
+++ b/LojaEcommerce/Views/Pedido/Carrossel.cshtml
@@ -1,76 +1,44 @@
 ﻿@{ 
     ViewData["Title"] = "Carrossel";
 }
+@model List<Produto>
 
 <h3>Catálogo</h3>
 
 <div id="my-carousel" class="carousel slide" data-ride="carousel">
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <div class="row">
-
-                @for (int i = 0; i < 4; i++)
-                {
-                    <div class="col-md-3">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                <img src="~/images/produtos/large_@(Model[i].Id).jpg" />
-                            </div>
-                            <div class="panel-footer">
-                                <div>@(Model[i].Nome) </div>
-                                <div>R$ @(Model[i].Preco)</div>
-                                <div class="text-center">
-                                    <a asp-action="carrinho">Adicionar</a>
+        @{ 
+            const int TAMANHO_PAGINA = 4;
+            int qtdPaginas = (int)Math.Ceiling((double)Model.Count() / TAMANHO_PAGINA);
+        }
+        @for (int pagina = 0; pagina < qtdPaginas; pagina++)
+        {
+            <div class="item @(pagina == 0 ? "active": "")">
+                <div class="row">
+                    @{ 
+                        var produtoPagina = Model.Skip(TAMANHO_PAGINA * pagina).Take(TAMANHO_PAGINA);
+                    }
+                    @foreach(var produto in produtoPagina)
+                    {
+                        <div class="col-md-3">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <img src="~/images/produtos/large_@(produto.Id).jpg" />
                                 </div>
-                            </div>
-                        </div>  
-                    </div>
-                }
-            </div>
-        </div>
-        <div class="item">
-            <div class="row">
-                @for (int i = 4; i < 8; i++)
-                {
-                    <div class="col-md-3">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                <img src="~/images/produtos/large_@(Model[i].Id).jpg" />
-                            </div>
-                            <div class="panel-footer">
-                                <div>@(Model[i].Nome) </div>
-                                <div>R$ @(Model[i].Preco)</div>
-                                <div class="text-center">
-                                    <a asp-action="carrinho">Adicionar</a>
+                                <div class="panel-footer">
+                                    <div>@(produto.Nome) </div>
+                                    <div>R$ @(produto.Preco)</div>
+                                    <div class="text-center">
+                                        <a asp-action="carrinho">Adicionar</a>
+                                    </div>
                                 </div>
-                            </div>
+                            </div>  
                         </div>
-                    </div>
-                }
+                    }
+                </div>
             </div>
-        </div>
-        <div class="item">
-            <div class="row">
-                @for (int i = 8; i < 9; i++)
-                {
-                    <div class="col-md-3">
-                        <div class="panel panel-default">
-                            <div class="panel-body">
-                                <img src="~/images/produtos/large_@(Model[i].Id).jpg" />
-                            </div>
-                            <div class="panel-footer">
-                                <div>@(Model[i].Nome) </div>
-                                <div>R$ @(Model[i].Preco)</div>
-                                <div class="text-center">
-                                    <a asp-action="carrinho">Adicionar</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
-            </div>
-        </div>
+        }
     </div>
 
     <!-- Controls -->
