Carrossel incluindo itens no pedido

--- a/LojaEcommerce/Views/Pedido/Carrossel.cshtml
+++ b/LojaEcommerce/Views/Pedido/Carrossel.cshtml
@@ -30,7 +30,7 @@
                                     <div>@(produto.Nome) </div>
                                     <div>R$ @(produto.Preco)</div>
                                     <div class="text-center">
-                                        <a asp-action="carrinho">Adicionar</a>
+                                        <a asp-action="carrinho" asp-route-produtoId="@(produto.Id)">Adicionar</a>
                                     </div>
                                 </div>
                             </div>  
