corrigindo bug do span Total

--- a/LojaEcommerce/Views/Pedido/Carrinho.cshtml
+++ b/LojaEcommerce/Views/Pedido/Carrinho.cshtml
@@ -49,7 +49,8 @@
     <div class="panel-footer">
         <div class="row">
             <div class="col-md-10">
-                Total: <span numero-itens> 
+                Total: 
+                <span numero-itens> 
                     @Model.Itens.Count() @(Model.Itens.Count() < 2 ? "item" : "itens")
                 </span>
             </div>
