--- a/LojaEcommerce/Views/Pedido/Cadastro.cshtml
+++ b/LojaEcommerce/Views/Pedido/Cadastro.cshtml
@@ -13,16 +13,19 @@
                     <label class="control-label" for="nomeCliente">Nome do Cliente</label>
                     <input type="text" class="form-control" id="nomeCliente" placeholder="Nome do Cliente" 
                            asp-for="Nome">
+                    <span asp-validation-for="Nome" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="email">E-mail</label>
                     <input type="email" class="form-control" id="email" placeholder="E-mail" 
                            asp-for="Email">
+                    <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="telefone">Telefone</label>
                     <input type="text" class="form-control" id="telefone" placeholder="Telefone" 
                            asp-for="Telefone">
+                    <span asp-validation-for="Telefone" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-md-4">
@@ -30,16 +33,19 @@
                     <label class="control-label" for="endereco">Endereço</label>
                     <input type="text" class="form-control" id="endereco" placeholder="Endereço" 
                            asp-for="Endereco">
+                    <span asp-validation-for="Endereco" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="complemento">Complemento</label>
                     <input type="text" class="form-control" id="complemento" placeholder="Complemento" 
                            asp-for="Complemento">
+                    <span asp-validation-for="Complemento" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="bairro">Bairro</label>
                     <input type="text" class="form-control" id="bairro" placeholder="Bairro" 
                            asp-for="Bairro">
+                    <span asp-validation-for="Bairro" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-md-4">
@@ -47,16 +53,19 @@
                     <label class="control-label" for="cidade">Cidade</label>
                     <input type="text" class="form-control" id="cidade" placeholder="Cidade" 
                            asp-for="Cidade">
+                    <span asp-validation-for="Cidade" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="uf">UF</label>
                     <input type="text" class="form-control" id="uf" placeholder="UF" 
                            asp-for="UF">
+                    <span asp-validation-for="UF" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label class="control-label" for="CEP">CEP</label>
                     <input type="text" class="form-control" id="CEP" placeholder="CEP" 
                            asp-for="CEP">
+                    <span asp-validation-for="CEP" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <a asp-action="carrinho" class="btn btn-warning">Continuar Comprando</a>
